# dataset_publisher

./: CMakeLists.txt  package.xml  readme.md
src/: mono_kitti_publisher.cpp  stereo_EuRoc_publisher.cpp  stereo_kitti_publisher.cpp
